recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  avance(100.);
  
}